Testing for Firebase (uncommenting)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:18.2.0'
 }
 
-//apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.gms.google-services'
 
