--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+    dependencies {
+        classpath 'com.google.gms:google-services:4.1.0'
+    }
     var
 }
 
