--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,9 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    compile 'com.android.support:appcompat-v7:28.0.0'
+    compile 'com.android.support.constraint:constraint-layout:1.1.3'
+    compile "com.google.firebase:firebase-auth:16.2.0"
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.google.firebase:firebase-database:16.1.0'
     testImplementation 'junit:junit:4.12'
@@ -35,5 +36,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:18.2.0'
 }
 
-//apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.gms.google-services'
 
