--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="uncme.seniors_at_work">
 
-    <uses-permission android:name="android.permission.INTERNET"
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -11,23 +11,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AccountActivity.ResetPasswordActivity"></activity>
-        <activity android:name=".AccountActivity.SignupActivity" />
-        <activity android:name=".AccountActivity.LoginActivity" />
-        <activity android:name=".FirebaseLogin" />
-        <activity
-            android:name=".FullscreenVideo"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_fullscreen_video"
-            android:theme="@style/FullscreenTheme" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".AccountActivity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SecondActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".AccountActivity.SignupActivity" />
+        <activity android:name=".AccountActivity.ResetPasswordActivity"></activity>
+
+        <!---<activity android:name=".FirebaseLogin" />
+        <activity
+            android:name=".FullscreenVideo"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_fullscreen_video"
+            android:theme="@style/FullscreenTheme" />
+
+        </activity>
+        <activity android:name=".SecondActivity" />-->
     </application>
 
 </manifest>
