--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AccountCreated"></activity>
+        <activity android:name=".HomePage"></activity>
+        <activity android:name=".AccountCreated" />
         <activity android:name=".UserSignUp" />
         <activity android:name=".SelectedVideo" />
         <activity
