--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Home">
-        </activity>
+        <activity android:name=".ClickPostActivity"></activity>
+        <activity android:name=".Home"></activity>
         <activity android:name=".PostActivity" />
         <activity android:name=".Navigation" />
         <activity android:name=".EditAccountSettingsActivity" />
@@ -36,6 +36,7 @@
         <activity android:name=".AccountActivity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
