--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ClickPostActivity"></activity>
-        <activity android:name=".Home"></activity>
+        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".ClickPostActivity" />
+        <activity android:name=".Home" />
         <activity android:name=".PostActivity" />
         <activity android:name=".Navigation" />
         <activity android:name=".EditAccountSettingsActivity" />
