--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FlagActivity"></activity>
+        <activity android:name=".ModActivity"></activity>
+        <activity android:name=".FlagActivity" />
         <activity android:name=".CommentsActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".ClickPostActivity" />
